--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
 
     <div class="container-four">
       <div class="box">
-        <div class="title">Call to action! It's time!</div>
-        <div class="subtext">
-          Sign up for our product by clicking that button right over there!
+        <div class="left">
+          <div class="title">Call to action! It's time!</div>
+          <div class="subtext">
+            Sign up for our product by clicking that button right over there!
+          </div>
         </div>
         <button class="sign-up">Sign up</button>
       </div>
